src/components/Navigation.module.scss
.container {
  padding-top: var(--static-space-20);
  width: 100%;
  max-width: 90%;
}

.nav {
  padding-left: var(--static-space-20);
  padding-right: var(--static-space-16);
  position: relative;
  z-index: 1000;
}

.menu {
  padding: var(--static-space-20);
  position: absolute;
  top: 120%;
  left: 0;
  right: 0;
  z-index: 999;
}

/* Mobile-first approach */
.desktopNav {
  display: none !important;
}

.mobileNav {
  display: flex !important;
}

.menu {
  display: block;
}

/* Tablet and above */
@media screen and (min-width: 768px) {
  .container {
    max-width: 95%;
  }

  .nav {
    padding-left: var(--static-space-12);
    padding-right: var(--static-space-12);
  }

  .menu {
    padding: var(--static-space-12);
  }

  .desktopNav {
    display: flex !important;
  }

  .mobileNav {
    display: none !important;
  }

  .menu {
    display: none !important;
  }
}

/* Desktop */
@media screen and (min-width: 900px) {
  .container {
    max-width: 90%;
  }

  .nav {
    padding-left: var(--static-space-12);
    padding-right: var(--static-space-12);
  }

  .menu {
    padding: var(--static-space-12);
  }

  .desktopNav {
    display: flex !important;
  }

  .mobileNav {
    display: none !important;
  }

  .menu {
    display: none !important;
  }
} 

